--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "^2.11.5",
     "@types/bootstrap": "^5.2.7",
-    "axios": "^1.6.0",
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.2",
     "cornerstone-core": "^2.6.1",
     "cornerstone-math": "^0.1.10",
@@ -24,6 +24,7 @@
     "eslint": "^8.14.0",
     "hammerjs": "^2.0.8",
     "pinia": "^2.0.13",
+    "rollup": "^4.22.4",
     "sass": "^1.69.5",
     "tiff.js": "^1.0.0",
     "tippy.js": "^6.3.7",
